# apple-music-mcp

./: LICENSE  README.md  pyproject.toml
docs/: research-catalog-to-library.md
src/apple_music_mcp/: server.py
